kubernetes/apps/default/glance/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: glance-egress-external
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: glance
  egress:
    - toFQDNs:
        - matchName: api.github.com
        - matchName: api.open-meteo.com
        - matchName: api.waqi.info
        - matchName: geocoding-api.open-meteo.com
        - matchName: github.com
        - matchName: hacker-news.firebaseio.com
        - matchName: store-site-backend-static.ak.epicgames.com
        - matchName: www.reddit.com
        - matchName: www.youtube.com

        - matchName: nerdz.cloud
        - matchName: blog.nerdz.cloud
        - matchName: inwestomat.eu
        - matchName: lowcygier.pl
        - matchName: morfikov.github.io
        - matchName: musicforprogramming.net
        - matchName: www.jeffgeerling.com
      toPorts:
        - ports:
            - port: "443"
